feat(documentation): agregado de alta y listado inicial de documentacion
